Added basic tasks for gulp to build frontend resources and invoke basic frontend server. Updated backend .gitignore to not include static/ files

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "gulp": "^3.9.1"
+    "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.1",
+    "gulp-connect": "^5.0.0",
+    "gulp-sourcemaps": "^2.5.1",
+    "main-bower-files": "^2.13.1"
   }
 }
