--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -15,7 +15,9 @@
   "dependencies": {
     "angular": "^1.6.4",
     "bootstrap": "^3.3.7",
-    "font-awesome": "fontawesome#^4.7.0"
+    "font-awesome": "fontawesome#^4.7.0",
+    "ng-file-upload-shim": "^12.2.13",
+    "ng-file-upload": "^12.2.13"
   },
   "devDependencies": {
     "angular-translate": "^2.15.1",
