--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -17,11 +17,13 @@
     "bootstrap": "^3.3.7",
     "font-awesome": "fontawesome#^4.7.0",
     "ng-file-upload-shim": "^12.2.13",
-    "ng-file-upload": "^12.2.13"
-  },
-  "devDependencies": {
+    "ng-file-upload": "^12.2.13",
     "angular-translate": "^2.15.1",
     "angular-translate-loader-static-files": "^2.15.1",
-    "angular-route": "^1.6.4"
+    "angular-route": "^1.6.4",
+    "angular-bootstrap": "^2.5.0",
+    "angular-animate": "^1.6.4"
+  },
+  "devDependencies": {
   }
 }
