--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,13 +11,13 @@
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-angular-templatecache": "^2.0.0",
+    "gulp-clean": "^0.3.2",
     "gulp-concat": "^2.6.1",
     "gulp-connect": "^5.0.0",
     "gulp-jshint": "^2.0.4",
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^2.5.1",
     "jshint": "^2.9.4",
-    "jshint-stylish": "^2.2.1",
-    "main-bower-files": "^2.13.1"
+    "jshint-stylish": "^2.2.1"
   }
 }
