--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -22,7 +22,8 @@
     "angular-translate-loader-static-files": "^2.15.1",
     "angular-route": "^1.6.4",
     "angular-bootstrap": "^2.5.0",
-    "angular-animate": "^1.6.4"
+    "angular-animate": "^1.6.4",
+    "webrtc-adapter": "^3.3.4"
   },
   "devDependencies": {
   }
